--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <!--barra lateral nevegacion-->
     <div class="barralateral">
         <nav>
             <img src="imagen-perfil.jpg"  width="200px" class="imgperfil" alt="">
@@ -55,53 +56,12 @@
         <span class="linea2">Edad: <span style="color: black; font-size: larger;"> 43</span>
         </span>
     </div>
+    <div>   
         <span >Estado Civil: <span style="color: black; font-size: larger;"> Casado</span>
         </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
+        <span class="linea2">Web: <span style="color: black; font-size: larger;">www.GAWEB.COM</span>
         </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus eum eveniet inventore eligendi expedita illum doloribus tempora delectus ad, est maiores aspernatur voluptate voluptas, cumque, quod voluptates magni magnam?
-
-        </span>
+    </div>    
 
     
 
