solo falta responsivo

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         </div>
 </div>
       
-    <hr style="border:0px; border-top: 5px double #000;" id="datospersonales" >
+    <hr style="border:0px; border-top: 5px double #000;"  >
     
 <section class="textogral">
         <!--datos personales-->
         <h2 >DATOS PERSONALES</h2>
     <div>
-        <div>
+        <div id="datospersonales">
         <div >
         <span>Nombre y Apellido: <span style="color: black; font-size: larger;"> Gustavo Alvarez</span>
         </span>
@@ -181,6 +181,9 @@
          <script src="JAVASCRIPT/java.js"></script>
 
 </div>
+
+<hr style="border:0px; border-top: 5px double #000;" ><!--Barra divisoria-->
+
 
 
 
