--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,15 @@
     </div>
 </section>
 <div class="home">
-<a href="index.html"><i class="fa-solid fa-house"></i></a>
+<a href="index.html"><i class="fa-solid fa-house"></i>INICIO</a>
+<div class=" musica">
+    <audio src="Paradise-coldplay.mp3" autoplay ></audio>
     </div>
 
+</div>   
     
+
+
+   
 </body>
 </html>
