--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,13 @@
     </div>
 
 </div>   
-    
+
+<!-- Cuadro para comntarios
+<form>
+<textarea rows=5 cols=40>
+Introduzca aquí sus comentarios
+</textarea>
+</form>-->
 
 
    
