--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
 
             <div class="rrss">
             <a href="https://www.facebook.com:" target="_blank" ><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
-            <a href="https://www.discord.com"><i class="fa-brands fa-discord"></i></a>
-            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.github.com"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.tiktok.com" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            <a href="https://www.discord.com" target="_blank"><i class="fa-brands fa-discord"></i></a>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.github.com" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
 </div>
       
     <hr style="border:0px; border-top: 5px double #000;" id="datospersonal" >
     
-<section class="textogral">
+<section >
         <!--datos personales-->
-        <u><h2 >DATOS PERSONALES</h2></u>
-    <div>
+        <u><h2 class="titulos">DATOS PERSONALES</h2></u>
+    <div class="textogral">
         <div id="datospersonales">
         <div >
         <span>Nombre y Apellido: <span style="color: black; font-size: larger;"> Gustavo Alvarez</span>
@@ -95,11 +95,11 @@
 <hr style="border:0px; border-top: 5px double #000;" ><!--Barra divisoria-->
 
 
-<div class="textogral">
+<div >
     <!--Expriencia Laboral-->
 
-    <u><h2 id="Experiencia_Laboral">EXPERIENCIA LABORAL</h2></u>
-        <section id="explab">
+    <u><h2 id="Experiencia_Laboral" class="titulos">EXPERIENCIA LABORAL</h2></u>
+        <section id="explab" class="textogral">
         <div >
             <h3 class="tituloempresa">COLSTING CIA</h3>
         <ul class="explaboral">
@@ -147,11 +147,11 @@
 
 <hr style="border:0px; border-top: 5px double #000;" ><!--Barra divisoria-->
 
-<div class="textogral">
+<div >
     <!--Formacion Academica-->
 
-    <u><h2 id="Formacion_academica">FORMACION ACADEMICA</h2></u>
-    <section id="ACADEMICA">
+    <u><h2 id="Formacion_academica" class="titulos">FORMACION ACADEMICA</h2></u>
+    <section id="ACADEMICA" class="textogral">
         <div >
             <h3 class="tituloescuela">INSTITUTO RIVERO</h3>
         <P>Desarrollo en sistemas. Manejo de redes.</P>
