casi final falta revision

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     <div class="barralateral">
         <nav>
             <img src="imagen-perfil.jpg"  width="200px" class="imgperfil" alt="">
-            <a href="" class="">INCIO</a>
+            <div class="linknav">
+            <a href="" class="linknav">INCIO</a>
             <a href="#datospersonal"class="">DATOS PERSONALES</a>
-            <a href="#Experiencia_Laboral">EXPERIENCIA LABORAL</a>
+            <a href="#Experiencia_Laboral" >EXPERIENCIA LABORAL</a>
             <a href="#Formacion_academica"class="">FORMACION ACADEMICA</a>
-            <a href="portfolio.html">PORTFOLIO FOTOGRAFICO</a>
+            <a href="portfolio.html" class="">PORTFOLIO FOTOGRAFICO</a>
+        </div>
         </nav>
     </div>
 <div> 
@@ -187,7 +189,7 @@
 
 <section>
     <div class="piepagina">
-        <span>Gustavo Alvarez//Roca 2154//Mar del Plata//Argentina//(54)223-53615555//gustavo@gmail.com
+        <span>Gustavo Alvarez // Roca 2154 // Mar del Plata // Argentina // (54)223-53615555 // gustavo@gmail.com
         </span>
     </div>
 </section>
