--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             <h3 class="tituloempresa">COLSTING CIA</h3>
         <ul class="explaboral">
             <li>Consultor grafico interino</li>
-            <li>Desde mi desempeño se posiciono la marca dentro de las 3 mejores emprensas nacionales</li>
-            <li>Desmpeño en tareas de marketing digital y cybrseguridad</li>
+            <li>Desde mi desempeño se posiciono la marca dentro de las 3 mejores empresas nacionales</li>
+            <li>Desempeño en tareas de marketing digital y cybrseguridad</li>
             <li>desde el 2018 a la actualidad en la empresa</li>
         </ul>  
           
@@ -187,7 +187,7 @@
 
 <hr style="border:0px; border-top: 5px double #000;" ><!--Barra divisoria-->
 
-<section>
+<section> <!--pie de pagina-->
     <div class="piepagina">
         <span>Gustavo Alvarez // Roca 2154 // Mar del Plata // Argentina // (54)223-53615555 // gustavo@gmail.com
         </span>
